# BugReportingTool

./: CMakeLists.txt  README.md
BugReportingTool/: BRController.cpp  BRController.h  BRCreateDialog.cpp  BRCreateDialog.h  BRData.cpp  BRData.h  BRModel.cpp  BRModel.h  BRTool.cpp  BRWindow.cpp  BRWindow.h  CMakeLists.txt  screenshotVideoWidget.cpp  screenshotVideoWidget.h
